--- a/CadastroDeNinjas/src/main/resources/application.properties
+++ b/CadastroDeNinjas/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=CadastroDeNinjas
+spring.datasource.url=jdbc:postgresql://localhost:5432/cadastrodeninjas
+spring.datasource.username=postgres
+spring.datasource.password=danicaio110224!
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
